# signal-math

./: .gitignore  CMakeLists.txt  conanfile.txt
.github/workflows/: ci.yml
app/: main.cpp
docker/: Dockerfile
include/: signal_math.hpp
src/: signal_math.cpp
tests/: test_signal_math.cpp
